# The-Quant-Prep

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  backtesting.ipynb  environment.yml  mc_options.ipynb  rename_map.json  test.ipynb
05_algorithmic_trading/strategies/crypto/Crypto Strategy/: README.md  setup.cfg
05_algorithmic_trading/strategies/crypto/Crypto Strategy/.github/workflows/: python-package.yml  python-publish.yml
05_algorithmic_trading/strategies/crypto/Crypto Strategy/docs/: index.md
05_algorithmic_trading/strategies/crypto/Crypto Strategy/src/crypto_strategy/commands/: cli.py
05_algorithmic_trading/strategies/crypto/Crypto Strategy/src/crypto_strategy/reporting/: report.py
05_algorithmic_trading/strategies/crypto/Crypto Strategy/src/crypto_strategy/strategies/: base.py  bo_strategy.py  macd_strategy.py
05_algorithmic_trading/strategies/crypto/Crypto Strategy/src/finlab_crypto/: __init__.py  chart.py  strategy.py  utility.py
05_algorithmic_trading/strategies/crypto/Crypto Strategy/tests/: positions_BTCUSDT-4h-bo-165-50-ts_stop-0.15-vol-30-1-20211207.pkl  positions_XRPUSDT-4h-bo-100-15-ts_stop-0.10-vol-10-2-20211230.pkl  test_regression.py
07_interview_preparation/: study_roadmap.md
Algorithmic Trading Backtesting in python/: Shreejit Swiss Seba.ipynb
Bayesian Belief Networks/: requirements.txt
Bond Analysis/: Bond.ipynb
Equity Options Pricing/: Heston Pricing 1.ipynb
FNO Strategies/: Bear Put Spread.ipynb  Diagonal Spread Trading Strategy - Python Code.ipynb  Long Strangle.ipynb  Long+Combo.ipynb  PCR.py  VIX.py  (+1 more)
(+1017 files in other folders)
