[metadata]
name = crypto-strategy
version = 0.1.20
author= Ming Gao
author_email = ming_gao@outlook.com
url = https://github.com/minggnim/crypto-strategy
description = Repo to create crypto strategies
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires =
    >=3.6
install_requires =
    numba
    numpy
    pandas
    vectorbt
    ta-lib-bin
    python-binance
 
[options.packages.find]
where = src

[options.extras_require]
full =
    tqdm
    click
    statsmodels
    pyecharts 
    seaborn

[options.entry_points]
console_scripts =
    crypto = crypto_strategy.commands.cli:cli
